--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "sdk2013"]
 	path = sdk2013
 	url = https://github.com/drunderscore/source-sdk-2013.git
-[submodule "metamod-source"]
-	path = metamod-source
-	url = https://github.com/alliedmodders/metamod-source.git
+[submodule "subhook"]
+	path = subhook
+	url = https://github.com/Zeex/subhook.git
