--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sdk2013"]
 	path = sdk2013
-	url = https://github.com/drunderscore/source-sdk-2013.git
+	url = https://github.com/ValveSoftware/source-sdk-2013
