--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,10 @@ add_library(${PROJECT_NAME} SHARED
     ${SRC_DIR}/modules/Recorder.cpp
 )
 
+# Minhook
+add_subdirectory(minhook)
+target_link_libraries(${PROJECT_NAME} PRIVATE minhook)
+
 # Include directories
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${SRC_DIR}
