fully implement video recorder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     vstdlib
     mathlib
     vgui_controls
+    d3d11
+    dxgi
 )
 
 # Post-build steps
